Update .env.template to include optional GitHub synchronization settings
- Added SYNC_TO_GITHUB variable to control automatic synchronization with GitHub.
- Updated GITHUB_TOKEN and GITHUB_REPO placeholders for clarity and consistency.

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
-# GitHub Configuration
-GITHUB_TOKEN=your_github_personal_access_token
-GITHUB_REPO=username/repository_name
+# GitHub Configuration (optional)
+# Set SYNC_TO_GITHUB=true to enable automatic GitHub synchronization
+SYNC_TO_GITHUB=false
+GITHUB_TOKEN=your_github_token_here
+GITHUB_REPO=username/repository
 REPO_PATH=/path/to/local/repository
 
 # Server Configuration
