Implement key management and message signing features
- Introduced KeyManager class for handling RSA key generation, signing, and verification of messages.
- Updated GitManager to integrate key management, allowing messages to be signed upon saving.
- Enhanced message metadata to include signature status and verification results.
- Modified .env.template to include configuration for key management.
- Improved frontend to display message authorship and signature verification status.

This commit enhances the security and integrity of messages by ensuring they can be signed and verified, providing users with confidence in the authenticity of the content.

--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,12 @@
 SYNC_TO_GITHUB=false
 GITHUB_TOKEN=your_github_token_here
 GITHUB_REPO=username/repository
-REPO_PATH=/path/to/local/repository
 
 # Server Configuration
 PORT=8000
-SECRET_KEY=your_secret_key
+
+# Key Management (optional)
+# Directory to store keys (default: repo/keys)
+KEYS_DIR=/path/to/keys
+# Whether to sign messages by default (true/false)
+SIGN_MESSAGES=true
