Enhance logging system and update configuration
- Added comprehensive logging configuration to the server, including multiple log levels (DEBUG, INFO, ERROR) and separate log files for each level.
- Updated the `.env.template` to include a new environment variable for enabling debug logging.
- Expanded the README to document the new logging features and usage instructions.
- Created new log files: `debug.log`, `info.log`, and `error.log` for structured logging output.

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,10 @@ SYNC_TO_GITHUB=false
 GITHUB_TOKEN=your_github_token_here
 GITHUB_REPO=username/repository
 
+# Logging Configuration
+# Set to any value to enable debug logging to console (default: disabled)
+# BOOKCHAT_DEBUG=true
+
 # Server Configuration
 PORT=8000
 
