Implement message verification feature and enhance UI
- Added a new environment variable for enabling message verification.
- Updated server logic to handle message verification status and default behavior.
- Enhanced client-side JavaScript to display verification status for messages.
- Improved CSS styles for message bubbles and verification indicators.
- Introduced global verification status display for chat messages.
- Refactored message rendering to include verification details and public key links.

--- a/.env.template
+++ b/.env.template
@@ -16,3 +16,6 @@ PORT=8000
 KEYS_DIR=/path/to/keys
 # Whether to sign messages by default (true/false)
 SIGN_MESSAGES=true
+
+# Enable message verification system (true/false)
+MESSAGE_VERIFICATION=false
