chore: Update core system components and documentation

--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,8 @@ SIGN_MESSAGES=true
 
 # Enable message verification system (true/false)
 MESSAGE_VERIFICATION=false
+
+# Archive settings
+ARCHIVE_INTERVAL_SECONDS=3600
+ARCHIVE_DAYS_THRESHOLD=30
+ARCHIVE_MAX_SIZE_MB=100
